# haskell-films

./: .gitignore  CHANGELOG.md  README.md  haskell-films.cabal
app/: CrudAPI.hs  Main.hs  test.http
app/Actors/: Actor.hs  ActorAPI.hs
app/Films/: Film.hs  FilmAPI.hs
db/: create-tables.sql  init.sh
