cabal-version:   3.0
name:            haskell-films
version:         0.1.0.0
license:         NONE
author:          nailzinnurov17@gmail.com
maintainer:      NailZinn
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable haskell-films
    import:           warnings
    main-is:          Main.hs
    other-modules:   
        Films.Film
        Films.FilmAPI
        Actors.Actor
        Actors.ActorAPI
        CrudAPI
    build-depends:
        base,
        servant-server,
        warp,
        aeson,
        uuid,
        sqlite-simple

    hs-source-dirs:   app
    default-language: Haskell2010
